--- a/views/register/index.html
+++ b/views/register/index.html
@@ -13,7 +13,7 @@
         <div class="pt-16 gap-4 h-screen flex max-w-7xl mx-auto justify-center items-center px-4">
             <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg shadow-xl lg:w-2/4">
                 <div class="flex flex-col gap-2 ">
-                    <label for="Nombre" class="font-bold">Nombre y Apellido <span class="text-red-600">*</span></label>
+                    <label for="nombre-input" class="font-bold">Nombre y Apellido <span class="text-red-600">*</span></label>
                     <input type="text" name="nombre-input" id="nombre-input" autocomplete="off" placeholder="Nombre y Apellido" class="rounded-lg p-2 focus:outline-blue-600">
                     <p class="text-xs">El nombre y el apellido debe comenzar con mayusculas</p>
                 </div>
@@ -21,14 +21,14 @@
                
                 <div class="flex flex-col gap-2 ">
 
-                    <label for="email"  class="font-bold">Email <span class="text-red-600">*</span></label>
+                    <label for="email-input"  class="font-bold">Email <span class="text-red-600">*</span></label>
                     <input type="email" name="email-input" id="email-input" autocomplete="off" placeholder=Email" class="rounded-lg p-2 focus:outline-blue-600">
                     <p class="text-xs">El correo es obligatorio</p>
                 </div>
                 
                 <div class="flex flex-col gap-2 ">
 
-                    <label for="password"  class="font-bold">password <span class="text-red-600">*</span></label>
+                    <label for="password-input"  class="font-bold">password <span class="text-red-600">*</span></label>
                     <input type="password" name="password-input" id="password-input" autocomplete="off"  class="rounded-lg p-2 focus:outline-blue-600">
                     <p class="text-xs">Debe tener al menos una letra minuscula,<br/>Debe tener al menos 1 letra mayuscula,<br/>Debe tener al menos 1 caracter especial</p>
                 </div>
