--- a/views/home/index.html
+++ b/views/home/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <nav id="navegacion" class="bg-red-950 h-16 right-0 left-0"></nav>
+    <nav id="navegacion" class="bg-blue-950 h-16 right-0 left-0"></nav>
     <div class="pt-16  h-screen flex justify-center items-center flex-col px-4  gap-4 md:flex-row lg:w-x3/5 mx-auto md:gap-8">
-            <a href="/"></a>
-            <h1 class="text-red-700 font-bold text-2xl md:text-4xl">Restaurant App</h1>
+            <!-- <a href="/"></a> -->
+            <h1 class="text-blue-700 font-bold text-2xl md:text-4xl"><a href="../home/index.html">Restaurant App</a></h1>
             <div>
                 <p class="text-justify py-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab doloribus voluptate expedita et dolorum facilis tempore, velit odio vitae! Pariatur blanditiis veniam neque culpa dignissimos eveniet nulla totam voluptate incidunt.</p>
                 <div >
