--- a/views/register/index.html
+++ b/views/register/index.html
@@ -11,6 +11,9 @@
 <body>
         <nav id="navegacion" class="bg-blue-950 h-16 right-0 left-0"></nav>
         
+       
+
+
         <div class="pt-16 gap-4 h-screen flex max-w-7xl mx-auto justify-center items-center px-4">
             <form id="formulario" class="flex flex-col gap-4 bg-blue-600 p-4 rounded-lg text-lg shadow-xl lg:w-2/4">
                 <div class="flex flex-col gap-2 ">
@@ -49,6 +52,7 @@
     
         <script src="../components/nav.js"></script>
         <script src="registro.js"></script>
+        <script  src="../components/notificacion.js"></script>
 </body>
 
 </html>
